tests/invalid/function_varargs_unsupported/main.py
def f(*args: int) -> int:
    return 0

if __name__ == "__main__":
    y: int = f(1, 2)
